--- a/02-lint/docker.file/kics.gitlab-ci.yml
+++ b/02-lint/docker.file/kics.gitlab-ci.yml
@@ -29,6 +29,6 @@ KICS Dockerfile Scanning:
       fi
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
