--- a/03-audit/base.gitlab-ci.yml
+++ b/03-audit/base.gitlab-ci.yml
@@ -24,6 +24,6 @@ Grype SBOM:
       fi
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
