--- a/03-audit/go.gitlab-ci.yml
+++ b/03-audit/go.gitlab-ci.yml
@@ -18,12 +18,12 @@ Forming CycloneDX SBOM (go):
       - reports/
     expire_in: 1 day
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
 
-Uploading SBOM to Dependency Track:
-  extends:
-    - ".Uploading_SBOM_to_Dependency_Track"
-    - ".audit_rule"
-  needs: ["Forming CycloneDX SBOM"]
+# Uploading SBOM to Dependency Track:
+#   extends:
+#     - ".Uploading_SBOM_to_Dependency_Track"
+#     - ".audit_rule"
+#   needs: ["Forming CycloneDX SBOM"]
