--- a/03-audit/python.gitlab-ci.yml
+++ b/03-audit/python.gitlab-ci.yml
@@ -26,18 +26,18 @@ Forming CycloneDX SBOM:
       fi
   when: manual
 
-poetry-audit:
-  extends:
-    - ".audit_base"
-    - ".audit_rule_mr"
-  variables:
-    AUDIT_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
-  before_script:
-    - poetry self add ko-poetry-audit-plugin
-  script:
-    - poetry audit --with dev
-  when: manual
+# poetry-audit:
+#   extends:
+#     - ".audit_base"
+#     - ".audit_rule_mr"
+#   variables:
+#     AUDIT_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+#   before_script:
+#     - poetry self add ko-poetry-audit-plugin
+#   script:
+#     - poetry audit --with dev
+#   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
