--- a/03-audit/docker.image.gitlab-ci.yml
+++ b/03-audit/docker.image.gitlab-ci.yml
@@ -14,12 +14,12 @@ Forming CycloneDX SBOM (Docker):
     - syft login $TARGET_REGISTRY -u $TARGET_REGISTRY_LOGIN -p $TARGET_REGISTRY_PASSWORD
     - syft scan $IMAGE_TO_SCAN
       -o cyclonedx-json > reports/cdx-sbom.syft.json
-  after_script:
-    - |
-      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        dt-wrapper --dt-sbom-path reports/cdx-sbom.syft.json --dt-enable-project-properties
-      fi
+  # after_script:
+  #   - |
+  #     if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
+  #       echo "Uploading"
+  #       dt-wrapper --dt-sbom-path reports/cdx-sbom.syft.json --dt-enable-project-properties
+  #     fi
   when: manual
 
 # DefectDojo Engagement Creation:
