--- a/03-audit/php.gitlab-ci.yml
+++ b/03-audit/php.gitlab-ci.yml
@@ -14,12 +14,12 @@ Forming CycloneDX SBOM:
     - composer CycloneDX:make-sbom 
       --output-format=JSON
       --output-file=reports/cdx-sbom.php.json
-  after_script:
-    - |
-      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        dt-wrapper --dt-sbom-path reports/cdx-sbom.php.json --dt-enable-project-properties
-      fi
+  # after_script:
+  #   - |
+  #     if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
+  #       echo "Uploading"
+  #       dt-wrapper --dt-sbom-path reports/cdx-sbom.php.json --dt-enable-project-properties
+  #     fi
   when: manual
 
 # DefectDojo Engagement Creation:
