--- a/03-audit/go.gitlab-ci.yml
+++ b/03-audit/go.gitlab-ci.yml
@@ -8,7 +8,7 @@ Forming CycloneDX SBOM (go):
     - ".audit_rule"
     - ".DefectDojo_variables"
   variables:
-    AUDIT_IMAGE: "cyclonedx-gomod:1.7.0"
+    AUDIT_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-gomod:1.7.0
   before_script:
     - mkdir reports/ || true
   script:
