--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -28,12 +28,13 @@ Detect-Secrets:
           detect-secrets scan .
         fi
       fi
-  # after_script:
-  #   - |
-  #     if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-  #       echo "Uploading"
+  after_script:
+    - |
+      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+        echo "Uploading"
+        cat reports/secrets.detect_secrets.report.json
   #       dd-wrapper --dd-report-file=reports/secrets.detect_secrets.report.json --dd-engagement-test-title="Detect-Secrets Scan"  --dd-engagement-scan-type="Detect-secrets Scan"
-  #     fi
+      fi
   when: manual
 
 # DefectDojo Engagement Creation:
