--- a/03-audit/go.gitlab-ci.yml
+++ b/03-audit/go.gitlab-ci.yml
@@ -7,8 +7,8 @@ Forming CycloneDX SBOM (go):
     - ".audit_base"
     - ".audit_rule"
     - ".DefectDojo_variables"
-  variables:
-    AUDIT_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-gomod:1.7.0
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-gomod:1.7.0
   before_script:
     - mkdir reports/ || true
   script:
