--- a/04-sast/java/cpd.gitlab-ci.yml
+++ b/04-sast/java/cpd.gitlab-ci.yml
@@ -31,6 +31,6 @@ cpd:
   when: manual
   allow_failure: true
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
