--- a/04-sast/java/spotbugs.gitlab-ci.yml
+++ b/04-sast/java/spotbugs.gitlab-ci.yml
@@ -25,6 +25,6 @@ spotbugs:
   when: manual
   allow_failure: true
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
