--- a/03-audit/python.gitlab-ci.yml
+++ b/03-audit/python.gitlab-ci.yml
@@ -12,8 +12,8 @@ Forming CycloneDX SBOM:
     - ".artifacts"
     - ".audit_base"
     - ".audit_rule"
-  variables:
-    AUDIT_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-py:latest
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-py:latest
   script:
     - cyclonedx-py $PYTHON_DEPENDENCY_MANAGMENT
       --output-format json
