--- a/04-sast/docker.image/dockle.gitlab-ci.yml
+++ b/04-sast/docker.image/dockle.gitlab-ci.yml
@@ -33,6 +33,6 @@ Dockle Image Scanning:
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
