--- a/04-sast/docker.image/grype.gitlab-ci.yml
+++ b/04-sast/docker.image/grype.gitlab-ci.yml
@@ -32,6 +32,6 @@ Grype Image Scanning:
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
