--- a/04-sast/frontend/eslint.gitlab-ci.yml
+++ b/04-sast/frontend/eslint.gitlab-ci.yml
@@ -33,6 +33,6 @@ eslint (sast):
   when: manual
   allow_failure: true
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
