--- a/04-sast/go/gosec.gitlab-ci.yml
+++ b/04-sast/go/gosec.gitlab-ci.yml
@@ -32,6 +32,6 @@ Gosec:
   when: manual
   allow_failure: true
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
