--- a/04-sast/java/pmd.gitlab-ci.yml
+++ b/04-sast/java/pmd.gitlab-ci.yml
@@ -30,6 +30,6 @@ pmd:
   when: manual
   allow_failure: true
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
