--- a/04-sast/k8s.helm/chart-testing.gitlab-ci.yml
+++ b/04-sast/k8s.helm/chart-testing.gitlab-ci.yml
@@ -22,6 +22,6 @@ chart-testing:
         - "Chart.lock"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
