--- a/04-sast/k8s.helm/checkov.gitlab-ci.yml
+++ b/04-sast/k8s.helm/checkov.gitlab-ci.yml
@@ -25,6 +25,6 @@ checkov:
         - "Chart.lock"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
