--- a/04-sast/k8s.helm/kics.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kics.gitlab-ci.yml
@@ -26,6 +26,6 @@ KICS Scanning:
         - "Chart.lock"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
