--- a/04-sast/k8s.helm/kube-bench.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kube-bench.gitlab-ci.yml
@@ -6,6 +6,6 @@ variables:
 
 # Kube-bench
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
