--- a/04-sast/k8s.helm/kube-linter.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kube-linter.gitlab-ci.yml
@@ -21,6 +21,6 @@ kube-linter:
         - "Chart.lock"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
