--- a/04-sast/k8s.helm/kube-score.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kube-score.gitlab-ci.yml
@@ -23,6 +23,6 @@ kube-score:
         - "Chart.lock"
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
