--- a/04-sast/k8s.helm/kubeconform.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kubeconform.gitlab-ci.yml
@@ -22,6 +22,6 @@ kubeconform:
       .
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
