--- a/04-sast/k8s.helm/kubesec.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kubesec.gitlab-ci.yml
@@ -17,6 +17,6 @@ kubesec:
     - helm template $HELM_VALUES_FILES ./ | kubesec scan /dev/stdin
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
