--- a/04-sast/k8s.helm/trivy.helm.gitlab-ci.yml
+++ b/04-sast/k8s.helm/trivy.helm.gitlab-ci.yml
@@ -16,6 +16,6 @@ Trivy K8S Scanning:
       --report summary cluster
   when: manual
 
-DefectDojo Engagement Creation:
-  extends:
-    - ".DefectDojo_Engagement_Creation"
+# DefectDojo Engagement Creation:
+#   extends:
+#     - ".DefectDojo_Engagement_Creation"
