--- a/04-sast/base/semgrep.gitlab-ci.yml
+++ b/04-sast/base/semgrep.gitlab-ci.yml
@@ -7,17 +7,17 @@ Semgrep:
     name: registry.gitlab.com/dc20e6/devsecops/images/semgrep:latest
   variables:
     SEARCH_MAX_DEPTH: 4
+    SEMGREP_CONFIG: "--config auto"
   extends:
     - ".sast_base"
     - ".DefectDojo_variables"
   script:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-        semgrep scan --config auto --json --json-output=reports/sast.semgrep.report.json --error
+        semgrep scan $SEMGREP_CONFIG --json --json-output=reports/sast.semgrep.report.json --error
       else
-        semgrep scan --config auto
+        semgrep scan $SEMGREP_CONFIG
       fi
-    - 
   after_script:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
