--- a/helpers/build.gitlab-ci.yml
+++ b/helpers/build.gitlab-ci.yml
@@ -1,15 +1,19 @@
 ".build":
+  stage: Build
   variables:
-    DOCKERFILE: $NAME_DOCKERFILE
-    IMAGE_DOCKERFILE: >
-      --dockerfile $CI_PROJECT_DIR/$DOCKERFILE
-    TAG: "$CI_COMMIT_TAG"
-    IMAGE_TAGS: >
-      --destination $REGISTRY_URL/$CI_PROJECT_NAME:$TAG
-    IMAGE_CONTEXT: >
-      --context $CI_PROJECT_DIR
-    IMAGE_ARGS: ''
-    IMAGE_LABELS: >
+    DOCKERFILE: ${NAME_DOCKERFILE:-Dockerfile}
+    TAG: "${CI_COMMIT_TAG:-latest}"
+    KANIKO_CONTEXT: >
+      --context ${CI_PROJECT_DIR}
+    KANIKO_DOCKERFILE: >
+      --dockerfile ${CI_PROJECT_DIR}/${DOCKERFILE}
+    KANIKO_ARGS: ''
+    # KANIKO_ARGS: >
+    #   --build-arg ARG1=ARG1
+    #   --build-arg ARG2=ARG2
+    KANIKO_DESTINATION: >
+      --destination "${CI_REGISTRY_IMAGE}:${TAG}"
+    KANIKO_LABELS: >
       --label org.opencontainers.image.vendor=$CI_SERVER_URL/$GITLAB_USER_LOGIN
       --label org.opencontainers.image.authors=$CI_SERVER_URL/$GITLAB_USER_LOGIN
       --label org.opencontainers.image.revision=$CI_COMMIT_SHA
@@ -21,11 +25,11 @@
     name: "gcr.io/kaniko-project/executor:v1.23.2-debug"
     entrypoint: [""]
   before_script:
-    - echo "{\"auths\":{\"${REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${REGISTRY_USER}" "${REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   script:
     - /kaniko/executor
-      $IMAGE_CONTEXT
-      $IMAGE_DOCKERFILE
-      $IMAGE_ARGS
-      $IMAGE_TAGS
-      $IMAGE_LABELS
+      $KANIKO_CONTEXT
+      $KANIKO_DOCKERFILE
+      $KANIKO_ARGS
+      $KANIKO_DESTINATION
+      $KANIKO_LABELS
