--- a/helpers/build.gitlab-ci.yml
+++ b/helpers/build.gitlab-ci.yml
@@ -12,7 +12,7 @@
     #   --build-arg ARG1=ARG1
     #   --build-arg ARG2=ARG2
     KANIKO_DESTINATION: >
-      --destination "$CI_REGISTRY_IMAGE:$TAG"
+      --destination $CI_REGISTRY_IMAGE:$TAG
     KANIKO_LABELS: >
       --label org.opencontainers.image.vendor=$CI_SERVER_URL/$GITLAB_USER_LOGIN
       --label org.opencontainers.image.authors=$CI_SERVER_URL/$GITLAB_USER_LOGIN
@@ -27,6 +27,7 @@
   before_script:
     - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   script:
+
     - /kaniko/executor
       $KANIKO_CONTEXT
       $KANIKO_DOCKERFILE
