--- a/03-audit/docker.image.gitlab-ci.yml
+++ b/03-audit/docker.image.gitlab-ci.yml
@@ -9,8 +9,8 @@ Forming CycloneDX SBOM (Docker):
     - ".audit_rule"
   variables:
     REGISTRY: $CI_REGISTRY
-    REGISTRY_USER: CI_REGISTRY_USER
-    REGISTRY_PASSWORD: CI_REGISTRY_PASSWORD
+    REGISTRY_USER: $CI_REGISTRY_USER
+    REGISTRY_PASSWORD: $CI_REGISTRY_PASSWORD
     REGISTRY_PATH: $CI_PROJECT_PATH
     TAG: "latest"
     SYFT_IMAGE: $REGISTRY/$REGISTRY_PATH:$TAG
