--- a/04-sast/python/bandit.gitlab-ci.yml
+++ b/04-sast/python/bandit.gitlab-ci.yml
@@ -26,7 +26,7 @@ Bandit:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
         echo "Uploading"
-        dd-wrapper --dd-report-file=reports/sast.bandit.report.json --dd-engagement-test-title="Bandit scan" --dd-engagement-scan-type="Bandit Scan"
+        cat reports/sast.bandit.report.json
       fi
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /bandit/"
